--- a/what i study today/0709.md
+++ b/what i study today/0709.md
@@ -1,51 +1,49 @@
-### 2019.07.09
+###2019.07.09
 
-# PROTOTYPE
-자바스크립트는 프로토타입 기반 객체지향 프로그래밍 언어
-클래스 기반 객체지향 프로그래밍 언어는 객체 생성 이전에 클래스를 정의하고 이를 통해 인스턴스를 생성하지만 프로토타입 기반 객체지향 프로그래밍 언어는 클래스 없이(Class-less)도 객체를 생성할 수 있음
+## PROTOTYPE
+자바스크립트는 프로토타입 기반 객체지향 프로그래밍 언어 클래스 기반 객체지향 프로그래밍 언어는 객체 생성 이전에 클래스를 정의하고 이를 통해 인스턴스를 생성하지만 프로토타입 기반 객체지향 프로그래밍 언어는 클래스 없이(Class-less)도 객체를 생성할 수 있음
 
-상속처럼 자바스크립트의 모든 객체는 부모 객체와 연결되어 있음
-이러한 부모 객체를 *Prototype 객체* 또는 줄여서 그냥 prototype이라 함
+상속처럼 자바스크립트의 모든 객체는 부모 객체와 연결되어 있음 이러한 부모 객체를 `Prototype 객체` 또는 줄여서 그냥 `prototype`이라 함
 
-Prototype 객체는 생성자 함수에 의해 생성된 각각의 객체에 공유 프로퍼티를 제공하기 위해 사용
+`Prototype 객체`는 생성자 함수에 의해 생성된 각각의 객체에 공유 프로퍼티를 제공하기 위해 사용
 
-자바스크립트의 모든 객체는 [[Property]] 라는 internal slot을 가짐 이 값은 null 또는 객체이며 상속을 구현하는데 사용
+자바스크립트의 모든 객체는 `[[Property]]` 라는 internal slot을 가짐 이 값은 null 또는 객체이며 상속을 구현하는데 사용
 
-객체를 생성할 때 prototype은 결정되며 결정된 prototype 객체는 다른 임의의 객체로 변경 가능 = 부모객체인 prototype을 동적으로 변경 가능
-이러한 특징을 이용해 *상속* 구현
-**Warnig** 프로토타입 객체를 변경하면
-* 프로토타입 객체 변경 시점 이전에 생성된 객체
-기존 프로토 타입 객체를 [[Prototype]]에 바인딩
+객체를 생성할 때 prototype은 결정되며 결정된 prototype 객체는 다른 임의의 객체로 변경 가능 = 부모객체인 prototype을 동적으로 변경 가능 이러한 특징을 이용해 **상속** 구현 
 
-* 프로토타입 객체 변경 시점 이후에 생성된 객체
-변경된 프로토타입 객체를 [[Prototype]]에 바인딩
+*Warnig* 프로토타입 객체를 변경하면
 
-##  [[Prototype]] / prototype 프로퍼티 / constructor 프로퍼티 
+* 프로토타입 객체 변경 시점 **이전**에 생성된 객체 기존 프로토 타입 객체를 `[[Prototype]]`에 바인딩
+
+* 프로토타입 객체 변경 시점 **이후**에 생성된 객체 변경된 프로토타입 객체를 `[[Prototype]]`에 바인딩
+
+## [[Prototype]] / prototype 프로퍼티 / constructor 프로퍼티
 함수 객체는 일반 객체와 달리 prototype 프로퍼디도 소유
 
-**Warning** prototype 프로퍼티는 prototype 객체를 가르키는 [[Prototype]] internal slot과 다름
+*Warning* 
+`prototype 프로퍼티`는 prototype 객체를 가르키는 `[[Prototype]]` internal slot과 다름
 
 * [[Prototype]]
     + 함수를 포함한 모든 객체가 가지고 있는 internal slot
-    + **객체의 입장에서 자신의 부모 역할을 하는 prototype 객체를 가리킴** 함수의 경우는 `Function.prototype`
+    + 객체의 입장에서 자신의 부모 역할을 하는 prototype 객체를 가리킴
+    + 함수의 경우는 `Function.prototype` 프로퍼티
 
-* prototype 프로퍼티
+* prototype 프로퍼티 
     + 함수 객체만 가지고 있는 프로퍼티
-    + **함수 객체가 생성자로 사용될 때 이 함수를 통해 생성될 객체의 prototype 객체를 가리킴**
+    + 함수 객체가 생성자로 사용될 때 이 함수를 통해 생성될 객체의 prototype 객체를 가리킴
 
 * constructor 프로퍼티
     + prototype 객체는 constructor 프로퍼티를 가짐
     + 객체 입장에서 자신을 생성한 객체를 가리킴
 
-## Prototype chain
-특정 객체의 프로퍼티나 메소드에 접근하려고 할 때 해당 객체에 접근하려는 프로퍼티 또는 메소드가 없다면 [[Prototype]]이 가리키는 링크를 따라 자신의 부모 역할을 하는 prototype 객체의 프로퍼티나 메소드를 차례로 검색
+### Prototype chain
+특정 객체의 프로퍼티나 메소드에 접근하려고 할 때 해당 객체에 접근하려는 프로퍼티 또는 메소드가 없다면 `[[Prototype]]`이 가리키는 링크를 따라 자신의 부모 역할을 하는 `prototype 객체`의 프로퍼티나 메소드를 차례로 검색
 
 ## Prototype 객체의 확장
-프로토타입 객체도 일반 객체와 같이 프로퍼티를 추가/삭제 가능
-이렇게 추가/삭제된 프로퍼티는 즉시 프로토타입 체인에 반영 
+프로토타입 객체도 일반 객체와 같이 프로퍼티를 추가/삭제 가능 이렇게 추가/삭제된 프로퍼티는 즉시 프로토타입 체인에 반영
 
 ### 원시 타입의 확장
-``` js
+```js
 var str = 'test';
 console.log(typeof str);                 // string
 console.log(str.constructor === String); // true
@@ -60,4 +58,37 @@ console.dir(strObj);
 console.log(str.toUpperCase());    // TEST
 console.log(strObj.toUpperCase()); // TEST
 ```
+
 String, Number, Array 객체 등이 가지고 있는 표준 메소드는 프로토타입 객체인 String.prototype, Number.prototype, Array.prototype 등에 정의 이들 프로토타입 객체 또한 Object.prototype를 prototype chain에 의해 자신의 프로토타입 객체로 연결
+
+### 2019.07.15
+## 상속
+https://developer.mozilla.org/ko/docs/Learn/JavaScript/Objects/Inheritance
+
+call(this,[arguments])
+첫번째 매개변수는 다른 곳에 정의된 함수를 현재 컨텍스트에서 실행할 수 있도록 함
+실행하고자 하는 함수의 첫번째 매개변수로 this를 전달하고 나머지는 실제 함수 실행에 필요한 인자들을 전달하면 됨
+
+```js
+//매개변수 있는 경우
+function Teacher(first, last, age){
+    Person.call(this, first, last, age);
+    this.subject = subject;
+}
+
+//매개변수 없는 경우
+function BlueGlassBrick(){
+    Brick.call(this);
+    this.color = 'blue';
+}
+```
+
+#### 프로토타입과 생성자 참조 설정하기
+위의 코드 예제에서 Teacher() 생성자는 Person()의 메소드를 상속받지 못함
+
+```js
+ Teacher.prototype = Object.create(Person.prototype);
+ Teacher.prototype.constructor = Teacher;
+```
+1. `create()`로 새 객체를 생성하여 `Teacher.prototype`으로 할당
+2. `Teacher.prototype`의 `constructor` 속성이 Person()으로 되어있으므로 고쳐줌
